notebook: get graph prefixes

--- a/notebooks/graph_prefixes.ipynb
+++ b/notebooks/graph_prefixes.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'graph': <Graph identifier=Nb463f47afe1a46d5a1887101296fed47 (<class 'rdflib.graph.Graph'>)>, '_NamespaceManager__cache': {}, '_NamespaceManager__cache_strict': {}, '_NamespaceManager__log': None, '_NamespaceManager__strie': {}, '_NamespaceManager__trie': {'http://www.w3.org/XML/1998/namespace': {}, 'http://www.w3.org/1999/02/22-rdf-syntax-ns#': {}, 'http://www.w3.org/2000/01/rdf-schema#': {}, 'http://www.w3.org/2001/XMLSchema#': {}, 'https://github.com/tibonto/aeon#': {}, 'http://dublincore.org/specifications/dublin-core/dcmi-terms/2012-06-14/': {}, 'http://www.w3.org/2003/06/sw-vocab-status/ns#': {}, 'http://purl.obolibrary.org/obo/': {'http://purl.obolibrary.org/obo/bfo/2020/bfo.owl#': {}, 'http://purl.obolibrary.org/obo/iao/2020-06-10/iao.owl#': {}}, 'http://www.w3.org/2002/07/owl#': {}, 'https://w3id.org/obda/vocabulary#': {}}}\n",
+      "{'graph': <Graph identifier=N70b3876a679c44929dcc6ead80e2d5ed (<class 'rdflib.graph.Graph'>)>, '_NamespaceManager__cache': {}, '_NamespaceManager__cache_strict': {}, '_NamespaceManager__log': None, '_NamespaceManager__strie': {}, '_NamespaceManager__trie': {'http://www.w3.org/XML/1998/namespace': {}, 'http://www.w3.org/1999/02/22-rdf-syntax-ns#': {}, 'http://www.w3.org/2000/01/rdf-schema#': {}, 'http://www.w3.org/2001/XMLSchema#': {}, 'https://github.com/tibonto/aeon#': {}, 'http://dublincore.org/specifications/dublin-core/dcmi-terms/2012-06-14/': {}, 'http://www.w3.org/2003/06/sw-vocab-status/ns#': {}, 'http://purl.obolibrary.org/obo/': {'http://purl.obolibrary.org/obo/bfo/2020/bfo.owl#': {}, 'http://purl.obolibrary.org/obo/iao/2020-06-10/iao.owl#': {}}, 'http://www.w3.org/2002/07/owl#': {}, 'https://w3id.org/obda/vocabulary#': {}}}\n",
       "\n",
       "\n",
       "{'': rdflib.term.URIRef('https://github.com/tibonto/aeon#'),\n",
@@ -32,6 +32,8 @@
       " 'rdfs': rdflib.term.URIRef('http://www.w3.org/2000/01/rdf-schema#'),\n",
       " 'xml': rdflib.term.URIRef('http://www.w3.org/XML/1998/namespace'),\n",
       " 'xsd': rdflib.term.URIRef('http://www.w3.org/2001/XMLSchema#')}\n",
+      "\n",
+      "\n",
       "dict_keys(['xml', 'rdf', 'rdfs', 'xsd', '', 'dc', 'ns', 'bfo', 'iao', 'obo', 'owl', 'aeon', 'obda'])\n"
      ]
     }
@@ -50,14 +52,16 @@
     "print('\\n')\n",
     "all_ns = {n[0]:n[1] for n in graph.namespace_manager.namespaces()}\n",
     "pprint(all_ns)\n",
-    "print(all_ns.keys())\n",
-    "\n",
-    "# printouts = graph.query(sparq_query, initNs={'rdf': RDF, 'rdfs': RDFS,'owl': OWL})\n",
-    "\n",
-    "# printout1 = list(printouts)[0]\n",
-    "# for printout_ in printouts:\n",
-    "#     print(printout_)"
+    "print('\\n')\n",
+    "print(all_ns.keys())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
