--- a/notebooks/get_ontology_info.ipynb
+++ b/notebooks/get_ontology_info.ipynb
@@ -48,9 +48,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "graph lenght: 3186\n"
+     ]
+    }
+   ],
    "source": [
     "import rdflib\n",
     "from rdflib import Graph\n",
@@ -66,7 +74,7 @@
     "# ontology_ns =rdflib.term.URIRef('http://purl.obolibrary.org/obo/BFO_0000179') # parsed\n",
     "# ontology_ns =rdflib.term.URIRef('http://purl.obolibrary.org/obo/BFO_0000015') # parsed\n",
     "# ontology_ns = rdflib.term.URIRef('https://github.com/tibonto/aeon#')\n",
-    "\n",
+    "ontology_ns = 'https://raw.githubusercontent.com/tibonto/aeon/master/aeon.owl'\n",
     "\n",
     "graph = Graph()\n",
     "# graph.parse(source='../aeon/aeon.ttl', format='ttl')\n",
@@ -78,7 +86,7 @@
     "    print(pe)\n",
     "    # print(graph.__dict__)\n",
     "\n",
-    "# print('graph lenght:', len(graph))\n",
+    "print('graph lenght:', len(graph))\n",
     "# for predicate in graph.predicate_objects():\n",
     "#     print(predicate)\n"
    ]
