class SMWImportOverview refactored

--- a/notebooks/get_ontology_info.ipynb
+++ b/notebooks/get_ontology_info.ipynb
@@ -110,7 +110,7 @@
    ],
    "source": [
     "# query_path = Path.cwd() / 'queries'\n",
-    "with open('../queries/query_ontology_schema.rq', 'r') as query_fobj:\n",
+    "with open('../queries/query_ontology.rq', 'r') as query_fobj:\n",
     "    sparq_query = query_fobj.read()\n",
     "\n",
     "printouts = graph.query(sparq_query)\n",
